# ai-shell

./: cli.py  pyproject.toml
commands/: chat_command.py  config_command.py  prompt_command.py  update_command.py
helpers/: completion.py  config.py  constants.py  error.py  i18n.py  os_detect.py  shell_history.py
locales/: en.json
